--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "s-echart",
 	"private": false,
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"license": "MIT",
 	"type": "module",
 	"main": "dist/SEchart.umd.js",
 	"module": "dist/SEchart.es.js",
+	"types": "dist/package/index.d.ts",
 	"author": "s-yqk",
 	"exports": {
 		".": {
@@ -36,6 +37,7 @@
 		"prettier": "^3.0.3",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5",
+		"vite-plugin-dts": "^3.6.0",
 		"vite-plugin-eslint": "^1.8.1",
 		"vue-tsc": "^1.8.5"
 	}
